Bestseller section completed.
Before I start/forget, as with the last commit, I am yet to
add the arrows that allow you scroll left or right on the
cards sections (both Vegetables and Bestsellers). These
qould be handled later. For now, I have a deadline to meet.

Okay. This commit:
-   Creates the best seller section using the reasoning
    behind nav bars to create its top section.
-   The other half is just a repetition of the cards
    section from the vegetables part of the product
    section, with a few tweaks for color differences.

I think that is pretty much it. On to the "Category"?
section? Lol. should be named something else really. Byeee

--- a/index.html
+++ b/index.html
@@ -322,6 +322,187 @@
 
         </div>
     </div>
+
+    <div class="bestseller-section">
+        <div class="nav-like-header-section">
+            <div class="title-and-button-bestseller">
+                <div class="bestseller-header">Our Bestsellers</div>
+                <ul class="bestseller-category-list">
+                    <li id="selected">All Categories</li>
+                    <li>Fruits</li>
+                    <li>Vegetables</li>
+                    <li>Drinks</li>
+                    <li>Pastries</li>
+                </ul>
+            </div>
+            <button class="btns" id="category1-button">Show More <span class="material-symbols-outlined">chevron_forward</span></button>
+        </div>
+
+        <div class="product-menu">
+            <div class="product-menu-card bestseller">
+                <div class="product-menu-card-upper-section">
+                    <div class="product-card-image">
+                        <img src="Images/Fruit basket.png" alt="">
+                    </div>
+                    <button class="add-to-wishlist-btn"><span class="material-symbols-outlined">favorite</i></button>
+                </div>
+                <div class="product-name-desc-and-rating">                        
+                    <div class="product-name">Grapes, Guava, Apples...</div>
+                    <div class="product-name-desc">Your exotic pick</div>
+                    <ul class="rating">
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="number-of-reviews">(1)</li>
+                    </ul>
+                </div>
+                <div class="price-tag">
+                    <div class="new-price-tag">$99.00</div>
+                    <div class="old-price-tag">$125.99</div>
+                </div>
+                <div class="size-and-qty">
+                    <div class="size">
+                        <div class="size-text">Size:</div>
+                        <form action="#">
+                            <!-- <label for="size-in-kg">Size:</label> -->
+                            <select id="size-in-kg" name="size-in-kg" required>
+                                <option value="1 Kg">1 Kg</option>
+                                <option value="1 Kg">2 Kg</option>
+                                <option value="1 Kg">3 Kg</option>
+                                <option value="1 Kg">4 Kg</option>
+                                <option value="1 Kg">5 Kg</option>
+                                <option value="1 Kg">6 Kg</option>
+                                <option value="1 Kg">7 Kg</option>
+                                <option value="1 Kg">8 Kg</option>
+                                <option value="1 Kg">9 Kg</option>
+                                <option value="1 Kg">10 Kg</option>
+                            </select>
+                        </form>
+                    </div>
+                    <div class="qty">
+                        <div class="qty-text">Quantity:</div>
+                        <div class="qty-btn">
+                            <button type="button" class="qty-count-minus">-</button>
+                            <input type="number" class="qty-count" min="0" max="15" value="1">
+                            <button type="button" class="qty-count-plus">+</button>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="size-submit btns">Add to Cart</button>
+            </div>
+            
+            <div class="product-menu-card bestseller">
+                <div class="product-menu-card-upper-section">
+                    <div class="product-card-image">
+                        <img src="Images/Strawberry in a basket.png" alt="">
+                    </div>
+                    <button class="add-to-wishlist-btn"><span class="material-symbols-outlined">favorite</i></button>
+                </div>
+                <div class="product-name-desc-and-rating">                        
+                    <div class="product-name">Strawberries! Pure delight!</div>
+                    <div class="product-name-desc">Smoothies, cakes, jam...</div>
+                    <ul class="rating">
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="number-of-reviews">(1)</li>
+                    </ul>
+                </div>
+                <div class="price-tag">
+                    <div class="new-price-tag">$99.00</div>
+                    <div class="old-price-tag">$125.99</div>
+                </div>
+                <div class="size-and-qty">
+                    <div class="size">
+                        <div class="size-text">Size:</div>
+                        <form action="#">
+                            <!-- <label for="size-in-kg">Size:</label> -->
+                            <select id="size-in-kg" name="size-in-kg" required>
+                                <option value="1 Kg">1 Kg</option>
+                                <option value="1 Kg">2 Kg</option>
+                                <option value="1 Kg">3 Kg</option>
+                                <option value="1 Kg">4 Kg</option>
+                                <option value="1 Kg">5 Kg</option>
+                                <option value="1 Kg">6 Kg</option>
+                                <option value="1 Kg">7 Kg</option>
+                                <option value="1 Kg">8 Kg</option>
+                                <option value="1 Kg">9 Kg</option>
+                                <option value="1 Kg">10 Kg</option>
+                            </select>
+                        </form>        
+                    </div>
+                    <div class="qty">
+                        <div class="qty-text">Quantity:</div>
+                        <div class="qty-btn">
+                            <button type="button" class="qty-count-minus">-</button>
+                            <input type="number" class="qty-count" min="0" max="15" value="1">
+                            <button type="button" class="qty-count-plus">+</button>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="size-submit btns">Add to Cart</button>
+            </div>
+
+            <div class="product-menu-card bestseller">
+                <div class="product-menu-card-upper-section">
+                    <div class="product-card-image">
+                        <img src="Images/Fruit basket with grass underneath it.png" alt="">
+                    </div>
+                    <button class="add-to-wishlist-btn"><span class="material-symbols-outlined">favorite</i></button>
+                </div>
+                <div class="product-name-desc-and-rating">                        
+                    <div class="product-name">Pineapples, Bananas</div>
+                    <div class="product-name-desc">Hey Sweet Tooth, enjoy natural sweetness</div>
+                    <ul class="rating">
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                        <li class="number-of-reviews">(1)</li>
+                    </ul>
+                </div>
+                <div class="price-tag">
+                    <div class="new-price-tag">$99.00</div>
+                    <div class="old-price-tag">$125.99</div>
+                </div>
+                <div class="size-and-qty">
+                    <div class="size">
+                        <div class="size-text">Size:</div>
+                        <form action="#">
+                            <!-- <label for="size-in-kg">Size:</label> -->
+                            <select id="size-in-kg" name="size-in-kg" required>
+                                <option value="1 Kg">1 Kg</option>
+                                <option value="1 Kg">2 Kg</option>
+                                <option value="1 Kg">3 Kg</option>
+                                <option value="1 Kg">4 Kg</option>
+                                <option value="1 Kg">5 Kg</option>
+                                <option value="1 Kg">6 Kg</option>
+                                <option value="1 Kg">7 Kg</option>
+                                <option value="1 Kg">8 Kg</option>
+                                <option value="1 Kg">9 Kg</option>
+                                <option value="1 Kg">10 Kg</option>
+                            </select>
+                        </form>        
+                    </div>
+                    <div class="qty">
+                        <div class="qty-text">Quantity:</div>
+                        <div class="qty-btn">
+                            <button type="button" class="qty-count-minus">-</button>
+                            <input type="number" class="qty-count" min="0" max="15" value="1">
+                            <button type="button" class="qty-count-plus">+</button>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="size-submit btns">Add to Cart</button>
+            </div>
+        </div>
+
+    </div>
     
 </body>
 </html>
