Create the fruits and pastry category of the website.
Whew! Lol.
Just spent some 15 -25 minutes wondering why a whole
id or class did not apply. Turns our named them ..clor
instead of ..color, and was busy seeing color.
The brain sees what it wants to see eh?

This commit:
-   Creates the category title and button, adding
    margin-bottom because of the nature of the cards
    beneath them.
-   Adjusts the markup I have for creating the product
    card so this one is shorter and not as wide as its
    counterparts in other sections.
-   Uses absolute and relative positioning to get the
    images in the cards to float.
-   To completely achieve this, the original images
    were sized down by 15% (applied to height and width)
    in order to tackle the expansion (growth/zooming)
    of the images when negative values were added to the
    top and right values used for positioning.
    Groups the second half or the cards (everything
    below the images) in order to use absolute positioning
    to position them at the bottom of the card, as they
    moved up after the image was positioned.

I feel this took more time than I expected (as everything
else before it did). I would not underestimate the next section..
orr overestimate my speed. Still learning.
Bye for now.

--- a/index.html
+++ b/index.html
@@ -503,6 +503,104 @@
         </div>
 
     </div>
-    
+
+    <div class="fruits-n-donuts">
+        <div class="category2">
+            <div class="title-and-button of-fruits-n-donuts">
+                <div class="category1n2-header">Fruits and Pastries</div>
+                <button class="btns" id="category1-button">Show More <span class="material-symbols-outlined">chevron_forward</span></button>
+            </div>
+
+            <div class="product-menu">
+                <div class="product-menu-card category3" id="fnd-card1-bgcolor">
+                    <div class="product-card-image category3-img">
+                        <img src="Images/Grape bunch.png" alt="">
+                    </div>
+                    <div class="card-second-half">
+                        <div class="product-name-desc-and-rating fruits-n-donuts-ndr">                        
+                            <div class="product-name">Fruit</div>
+                            <div class="product-name-desc">Grapes</div>
+                            <ul class="rating">
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="number-of-reviews">(1)</li>
+                            </ul>
+                        </div>
+                        <div class="fruits-n-donuts-price-tag">$12.00</div>
+                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                    </div>
+                </div>
+
+                <div class="product-menu-card category3" id="fnd-card2-bgcolor">
+                    <div class="product-card-image category3-img">
+                        <img src="Images/orange-juicy-ripe-circle-citrus-removebg-preview.png" alt="">
+                    </div>
+                    <div class="card-second-half">
+                        <div class="product-name-desc-and-rating fruits-n-donuts-ndr">                        
+                            <div class="product-name">Fruit</div>
+                            <div class="product-name-desc">Oranges</div>
+                            <ul class="rating">
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="number-of-reviews">(1)</li>
+                            </ul>
+                        </div>
+                        <div class="fruits-n-donuts-price-tag">$9.13</div>
+                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                    </div>
+                </div>
+            
+                <div class="product-menu-card category3" id="fnd-card3-bgcolor">
+                    <div class="product-card-image category3-img">
+                        <img src="Images/fresh-kiwi-fruit-isolated-removebg-preview.png" alt="">
+                    </div>
+                    <div class="card-second-half">
+                        <div class="product-name-desc-and-rating fruits-n-donuts-ndr">                        
+                            <div class="product-name">Fruit</div>
+                            <div class="product-name-desc">Kiwi</div>
+                            <ul class="rating">
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="number-of-reviews">(1)</li>
+                            </ul>
+                        </div>
+                        <div class="fruits-n-donuts-price-tag">$15.74</div>
+                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                    </div>
+                </div>
+
+                <div class="product-menu-card category3" id="fnd-card4-bgcolor">
+                    <div class="product-card-image category3-img">
+                        <img src="Images/fresh-tasty-donuts-with-chocolate-glaze-removebg-preview.png" alt="">
+                    </div>
+                    <div class="card-second-half">
+                        <div class="product-name-desc-and-rating fruits-n-donuts-ndr">                        
+                            <div class="product-name">Pastry</div>
+                            <div class="product-name-desc">Glazed Donuts</div>
+                            <ul class="rating">
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                                <li class="number-of-reviews">(1)</li>
+                            </ul>
+                        </div>
+                        <div class="fruits-n-donuts-price-tag">$5.80</div>
+                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
