--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                             </ul>
                         </div>
                         <div class="fruits-n-donuts-price-tag">$12.00</div>
-                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                        <button type="submit" class="size-submit btns fnd-btn">Add to Cart</button>
                     </div>
                 </div>
 
@@ -552,7 +552,7 @@
                             </ul>
                         </div>
                         <div class="fruits-n-donuts-price-tag">$9.13</div>
-                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                        <button type="submit" class="size-submit btns fnd-btn">Add to Cart</button>
                     </div>
                 </div>
             
@@ -574,7 +574,7 @@
                             </ul>
                         </div>
                         <div class="fruits-n-donuts-price-tag">$15.74</div>
-                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                        <button type="submit" class="size-submit btns fnd-btn">Add to Cart</button>
                     </div>
                 </div>
 
@@ -596,9 +596,39 @@
                             </ul>
                         </div>
                         <div class="fruits-n-donuts-price-tag">$5.80</div>
-                        <button type="submit" class="size-submit btns">Add to Cart</button>
+                        <button type="submit" class="size-submit btns fnd-btn">Add to Cart</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="info-section">
+        <div class="half-info-section">
+            <div class="info-class-image">
+                <img src="Images/Red Apples in a basket.png" alt="">
+            </div>
+            <div class="info-section-title-n-text">
+                <div class="info-section-title">Fruits and Vegetables</div>
+                <div class="info-section-text">These superfoods are packed with vital nutrients, including vitamins 
+                    and mineral that can help you keep health. Plus they are easy to enjoy just add water and let 
+                    the magic happen.
+                </div>
+                <button class="btns">View More <span class="material-symbols-outlined">chevron_forward</span></button>
+            </div>
+        </div>
+
+        <div class="half-info-section">
+            <div class="info-class-image">
+                <img src="Images/Red Apples in a basket.png" alt="">
+            </div>
+            <div class="info-section-title-n-text">
+                <div class="info-section-title">Fruits and Vegetables</div>
+                <div class="info-section-text">These superfoods are packed with vital nutrients, including vitamins 
+                    and mineral that can help you keep health. Plus they are easy to enjoy just add water and let 
+                    the magic happen.
+                </div>
+                <button class="btns">View More <span class="material-symbols-outlined">chevron_forward</span></button>
             </div>
         </div>
     </div>
