Create the Testimonial Section of the website.
I wrote quite a number of lines of styles but had
to scrape them to start all over. lol.

This commit:
-   Creates two divs, separating section title, message
    and button from the testimonial cards.
-   Creates the cards, giving them border and box-shadow.
-   Styles the card to just look like it should, excluding
    the left and right arrows that allow users scroll.
    Again, I would come back to those arrows for every
    section that needs it.

Alright. I am already behind my own schedule for completing
this. Bye.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <div class="bestseller-section">
         <div class="nav-like-header-section">
             <div class="title-and-button-bestseller">
-                <div class="bestseller-header">Our Bestsellers</div>
+                <div class="bestseller-title">Our Bestsellers</div>
                 <ul class="bestseller-category-list">
                     <li id="selected">All Categories</li>
                     <li>Fruits</li>
@@ -355,7 +355,7 @@
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
-                        <li class="number-of-reviews">(1)</li>
+                        <li class="number-of-reviews">(6)</li>
                     </ul>
                 </div>
                 <div class="price-tag">
@@ -409,7 +409,7 @@
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
-                        <li class="number-of-reviews">(1)</li>
+                        <li class="number-of-reviews">(32)</li>
                     </ul>
                 </div>
                 <div class="price-tag">
@@ -463,7 +463,7 @@
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
                         <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
-                        <li class="number-of-reviews">(1)</li>
+                        <li class="number-of-reviews">(18)</li>
                     </ul>
                 </div>
                 <div class="price-tag">
@@ -608,28 +608,88 @@
             <div class="info-class-image">
                 <img src="Images/Red Apples in a basket.png" alt="">
             </div>
-            <div class="info-section-title-n-text">
+            <div class="info-section-title-text-btn">
                 <div class="info-section-title">Fruits and Vegetables</div>
                 <div class="info-section-text">These superfoods are packed with vital nutrients, including vitamins 
                     and mineral that can help you keep health. Plus they are easy to enjoy just add water and let 
                     the magic happen.
                 </div>
-                <button class="btns">View More <span class="material-symbols-outlined">chevron_forward</span></button>
+                <button class="btns">View All <span class="material-symbols-outlined">chevron_forward</span></button>
             </div>
         </div>
 
         <div class="half-info-section">
             <div class="info-class-image">
-                <img src="Images/Red Apples in a basket.png" alt="">
+                <img src="Images/Apples, orange and grapes.png" alt="">
             </div>
-            <div class="info-section-title-n-text">
+            <div class="info-section-title-text-btn">
                 <div class="info-section-title">Fruits and Vegetables</div>
                 <div class="info-section-text">These superfoods are packed with vital nutrients, including vitamins 
                     and mineral that can help you keep health. Plus they are easy to enjoy just add water and let 
                     the magic happen.
                 </div>
-                <button class="btns">View More <span class="material-symbols-outlined">chevron_forward</span></button>
+                <button class="btns">View All <span class="material-symbols-outlined">chevron_forward</span></button>
             </div>
+        </div>
+    </div>
+
+    <div class="testimonial-section">
+        <div class="testimonial-section-title-text-btn">
+            <div class="testimonial-title">Testimonials</div>
+            <div class="testimonial-text">Nothing says “fresh” like the words of those who’ve tried it.
+                Our community keeps us inspired with their honest reviews and love for good food.
+                Here’s a glimpse of what they’re saying.
+            </div>
+            <button class="btns">Read All <span class="material-symbols-outlined">chevron_forward</span></button>
+        </div>
+
+        <div class="testimonial-cards-half">
+            <div class="testimonial-card">
+                <ul class="rating">
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="number-of-reviews">4.0/5</li>
+                </ul>
+                <div class="testimonial-key-extract-n-text">
+                    <div class="testimonial-key-extract">Absolutely divine!</div>
+                    <div class="testimonial-card-text">Loved my Healthy Gut bundle. Everything looked farm-fresh and tasted amazing. 
+                        Food Plug really delivers quality
+                    </div>
+                    <div class="customer-img-n-name">
+                        <img src="Images/customer1.png" alt="" class="customer-img">
+                        <div class="customer-name-title">
+                            <div class="customer-name">Chinaza Bankole</div>
+                            <div class="customer-title">Fit-fam</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <ul class="rating">
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="stars-4-rating"><span class="material-symbols-outlined">star</span></li>
+                    <li class="number-of-reviews">4.0/5</li>
+                </ul>
+                <div class="testimonial-key-extract-n-text">
+                    <div class="testimonial-key-extract">Absolutely divine!</div>
+                    <div class="testimonial-card-text">The Clear Skin pack was fresh, colorful, and super convenient. You can 
+                        literally taste the care in every veggie!
+                    </div>
+                    <div class="customer-img-n-name">
+                        <img src="Images/customer2.png" alt="" class="customer-img">
+                        <div class="customer-name-title">
+                            <div class="customer-name">Amina Eseogene</div>
+                            <div class="customer-title">Aesthetician</div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </div>
     </div>
 </body>
