Create the Blog Section w title, copy, 3 cards & two-colored backgrounds.
Hi. I am tired and feeling slow, despite hybernating most of today.

This commit:
-   creates the blog section; centralising its title
    and copy/text.
-   creates 3 cards with box-shadow effect.
-   make the background color have two colors using
    the linear-gradient feature in css.

I feel there are things I need to improve, like the
button that spans across the width of the cards, but
I really am not up for that now.
Pushed myself to start and get this section done today.
Hoefully, I wrap the website up by midnight. I take a break now.
Ciao.

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                             </ul>
                         </div>
                         <div class="fruits-n-donuts-price-tag">$12.00</div>
-                        <button type="submit" class="size-submit btns fnd-btn">Add to Cart</button>
+                        <button type="submit" class="btns fnd-btn">Add to Cart</button>
                     </div>
                 </div>
 
@@ -690,6 +690,65 @@
                     </div>
                 </div>
             </div> 
+        </div>
+    </div>
+
+    <div class="blog-section">
+        <div class="blog-title-n-text">
+            <div class="blog-title">Fresh Reads</div>
+            <div class="blog-text">Stay inspired with simple stories, helpful tips, and honest conversations around food, wellness, and 
+                everyday living.
+                From seasonal veggies to mindful habits, each read is crafted to nourish your mind just as much as your body.
+            </div>
+        </div>
+        <div class="blog-section-half">
+            <div class="blog-card">
+                <div class="blog-card-upper-section">
+                    <div class="blog-card-img">
+                        <img src="Images/Red Apple.png" alt="">
+                    </div>
+                    <div class="blog-card-btn-like-text">Food</div>
+                </div>
+                <div class="blog-card-lower-section">
+                    <div class="blog-card-title">5 Seasonal Fruits You Shouldn’t Miss This Month</div>
+                    <div class="blog-card-text">Discover the freshest fruits in season right now and why they’re worth adding to your meals. 
+                        From flavor to nutrition, these picks bring nature’s best to your plate.
+                    </div>
+                    <button class="btns">Read All <span class="material-symbols-outlined">chevron_forward</span></button>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="blog-card-upper-section">
+                    <div class="blog-card-img">
+                        <img src="Images/Fruit basket with grass underneath it with bg.png" alt="">
+                    </div>
+                    <div class="blog-card-btn-like-text">Food</div>
+                </div>
+                <div class="blog-card-lower-section">
+                    <div class="blog-card-title">Simple Ways to Add More Fruit to Your Daily Meals</div>
+                    <div class="blog-card-text">Struggling to eat healthy? Here are easy, tasty ways to include fruits in breakfast, 
+                        snacks, and even dinner—no complicated recipes needed.
+                    </div>
+                    <button class="btns">Read All <span class="material-symbols-outlined">chevron_forward</span></button>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="blog-card-upper-section">
+                    <div class="blog-card-img">
+                        <img src="Images/Red Apple.png" alt="">
+                    </div>
+                    <div class="blog-card-btn-like-text">Food</div>
+                </div>
+                <div class="blog-card-lower-section">
+                    <div class="blog-card-title">Why Fresh Produce Beats Processed Every Time</div>
+                    <div class="blog-card-text">A closer look at how fresh fruits and vegetables support your body better than packaged 
+                        alternatives. Clean, natural, and full of life —just the way it should be.
+                    </div>
+                    <button class="btns">Read All <span class="material-symbols-outlined">chevron_forward</span></button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
